syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/gamesystems.proto";

// 衣柜系统消息类型
message RES_WARDROBE_SET_SLOT_MANNEQUIN {
  int32 error = 1;
  int32 slotId = 2;
  int32 itemId = 3;
  bool success = 4;
}

message RES_WARDROBE_INFO {
  int32 error = 1;
  repeated WardrobeSlot slots = 2;
}

message RES_WARDROBE_EXTENTION_MANNEQUIN {
  int32 error = 1;
  int32 newSlotCount = 2;
  bool success = 3;
}

message RES_WARDROBE_SET_SLOT {
  int32 error = 1;
  int32 slotId = 2;
  int32 itemId = 3;
}

message RES_WARDROBE_SET_MANNEQUIN {
  int32 error = 1;
  int32 mannequinId = 2;
  string name = 3;
}

message WardrobeSlot {
  int32 id = 1;
  int32 itemId = 2;
  bool occupied = 3;
}

// 药水系统消息类型
message RES_TONIC_INFO {
  int32 error = 1;
  repeated TonicInfo tonics = 2;
}

message RES_TONIC_UPGRADE {
  int32 error = 1;
  int32 tonicId = 2;
  int32 newLevel = 3;
  bool success = 4;
}

message RES_TONIC_INIT {
  int32 error = 1;
  repeated TonicInfo tonics = 2;
}

// 婚礼系统消息类型
message RES_WRITE_WEDDING_GUESTBOOK {
  int32 error = 1;
  bool success = 2;
}

message RES_SEND_WEDDING_INVITATION {
  int32 error = 1;
  string guestName = 2;
  bool success = 3;
}

message RES_SEND_WEDDING_MONEY_GIFT {
  int32 error = 1;
  int32 amount = 2;
  bool success = 3;
}

message RES_SELECT_WEDDING_THEME {
  int32 error = 1;
  int32 themeId = 2;
  bool success = 3;
}

message RES_WEDDING_RECEPTION_EVENT {
  int32 error = 1;
  int32 eventId = 2;
  string eventName = 3;
}
