package com.dnfm.mina.protobuf;

import com.baidu.bjf.remoting.protobuf.FieldType;
import com.baidu.bjf.remoting.protobuf.annotation.Protobuf;
import com.dnfm.mina.annotation.MessageMeta;
import java.util.List;

@MessageMeta(
   module = 11039,
   cmd = 1
)
public class RES_TONIC_INFO extends Message {
   @Protobuf(
      fieldType = FieldType.INT32,
      order = 1,
      required = false
   )
   public Integer error;
   @Protobuf(
      order = 2
   )
   public List<PT_TONIC_INFO> crystaltonic;
   @Protobuf(
      order = 3
   )
   public List<PT_TONIC_MATERIAL_USAGE> crystaltonicpoint;
}
